--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/ClaudServer/target/
-/CloudServer/target/
-/CloudClient/target/
+NetworkCloudClient_
+NetworkCloudClientDefault
+NetworkCloudClient/target
+NetworkCloudClient/src/test
+NetworkCloudClient/nbactions.xml
+NetworkCloudClient/nbactions-fx.xml
+NetworkCloudClient/nb-configuration.xml
+NetworkCloudServer/target
+NetworkCloudServer/src/test
+NetworkCloudServer/nbactions.xml
+.gitignore
